--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,15 @@ hr {
     color: #fafafa;
 }
 
+/*Gallery Page */
+#photos img {
+    width: 100%;
+}
+
+#photos {
+    line-height: 0;
+}
+
 /* footer */
 #social-networks {
     text-align: center;
