increase gallery columns on larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,7 @@ hr {
 /*Gallery Page */
 #photos img {
     width: 100%;
+    line-height: 1em;
 }
 
 #photos {
@@ -208,6 +209,15 @@ hr {
     padding: 5%;
     color: #3a3a3a;
 }
+
+/*Media query for large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 
 /* Media queries: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -266,11 +276,21 @@ hr {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
+
 }
 
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 
     /* Reasons section */
